Fix the web access contrast issue

--- a/themes/zuzu/static/css/main.css
+++ b/themes/zuzu/static/css/main.css
@@ -451,7 +451,7 @@ section.background-light {
 }
 
 a.no-decoration {
-  color: #9e9e9e;
+  color: #535353;
   text-decoration: none;
 }
 
@@ -578,7 +578,7 @@ a.no-decoration:hover {
 }
 
 a.no-decoration {
-  color: #9e9e9e;
+  color: #535353;
   text-decoration: none;
 }
 
@@ -1153,7 +1153,7 @@ nav.main-nav .active .nav-link {
   font-weight: 500;
   letter-spacing: -0.01rem;
   line-height: 1.5;
-  color: #9e9e9e;
+  color: #535353;
   margin-bottom: 0.375rem;
 }
 
@@ -1234,7 +1234,7 @@ nav.main-nav .active .nav-link {
   font-weight: 500;
   letter-spacing: -0.01rem;
   line-height: 1.3;
-  color: #9e9e9e;
+  color: #535353;
 }
 
 @media screen and (max-width: 600px) {
@@ -1391,9 +1391,9 @@ footer .footer-group .footer-group-social-group-list p {
 footer .footer-group-title {
   margin-bottom: 0.375rem;
   color: #535353;
-  font-size: 0.9rem;
+  font-size: 1rem;
   font-weight: 700;
-  letter-spacing: 0.01rem;
+  letter-spacing: -0.01rem;
   line-height: 2;
 }
 
@@ -1423,7 +1423,7 @@ footer .footer-group-company-info {
   letter-spacing: 0.01rem;
   line-height: 2;
   padding: 0;
-  color: #9e9e9e;
+  color: #535353;
 }
 
 @media screen and (max-width: 600px) {
@@ -1505,7 +1505,7 @@ footer .footer-group-social li + li {
   font-weight: 500;
   letter-spacing: 0.01rem;
   line-height: 1;
-  color: #9e9e9e;
+  color: #535353;
 }
 
 @media screen and (max-width: 600px) {
