--- a/themes/zuzu/static/scss/layout/_cta.scss
+++ b/themes/zuzu/static/scss/layout/_cta.scss
@@ -8,6 +8,6 @@
     &-caption {
         margin-top: $baseUnit * 2;
         @include caption(1, $medium);
-        color: $disabledText;
+        color: $bodyText;
     }
 }
